Dhyey (#32)
* targat file issue (#28)

* Delete .idea/artifacts directory

* Update Dockerfile

---------

Co-authored-by: HarshilMalaviya <142708535+HarshilMalaviya@users.noreply.github.com>

* Docker implementation changes

* Docker implementation changes

* Docker implementation changes

* Docker implementation changes

* Docker implementation changes

* Docker implementation changes

* Docker implementation changes

* Delete mysql_data directory

* Delete ProGig/target directory

* implementing API

---------

Co-authored-by: HarshilMalaviya <142708535+HarshilMalaviya@users.noreply.github.com>